# otus-cpp-basics

./: .gitignore  .gitmodules  Ball.cpp  Ball.hpp  CMakeLists.txt  MyContainer.cpp  MyContainer.h  MyContainer.inl  MyList.h  MyList.inl  Painter.hpp  README.md  World.cpp  argument.cpp  check_value.cpp  hello_world.cpp  high_scores.cpp  main.cpp  random_value.cpp  statistics.cpp
black_box/: Application.cpp
example/: example.cpp
impl/: ArithmeticMean.cpp  ArithmeticMean.h  IStatistics.h  Max.cpp  Max.h  Mean.h  Min.cpp  Min.h  Std.h  StdDeviation.cpp  StdDeviation.h  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  random_value.cpp  random_value.h
move_me_out/: move_me_out.cpp  move_me_out.h
src/: MyContainer.h  MyContainer.inl
test/: my_container_tests.cpp  my_list_tests.cpp
